// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupUtils convertToFlat complex structure 1`] = `
Array [
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
    ],
    "value": "France",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
      "Cat",
    ],
    "value": "Cat",
  },
  Object {
    "country": "France",
    "name": "Simba",
    "type": "Cat",
  },
  Object {
    "country": "France",
    "name": "Kas",
    "type": "Cat",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
      "Dog",
    ],
    "value": "Dog",
  },
  Object {
    "country": "France",
    "name": "Slimu",
    "type": "Dog",
  },
  Object {
    "country": "France",
    "name": "Rex",
    "type": "Dog",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "Brazil",
    ],
    "value": "Brazil",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "Brazil",
      "Cat",
    ],
    "value": "Cat",
  },
  Object {
    "country": "Brazil",
    "name": "Simba",
    "type": "Cat",
  },
  Object {
    "country": "Brazil",
    "name": "Kas",
    "type": "Cat",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "Brazil",
      "Dog",
    ],
    "value": "Dog",
  },
  Object {
    "country": "Brazil",
    "name": "Slimu",
    "type": "Dog",
  },
  Object {
    "country": "Brazil",
    "name": "Rex",
    "type": "Dog",
  },
]
`;

exports[`GroupUtils convertToFlat inner group 1`] = `
Array [
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
    ],
    "value": "France",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
      "Cat",
    ],
    "value": "Cat",
  },
  Object {
    "country": "France",
    "name": "Simba",
    "type": "Cat",
  },
]
`;

exports[`GroupUtils convertToFlat inner group with summart 1`] = `
Array [
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
    ],
    "value": "France",
  },
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
      "Cat",
    ],
    "value": "Cat",
  },
  Object {
    "country": "France",
    "name": "Simba",
    "type": "Cat",
  },
  Object {
    "groupData": Array [
      Object {
        "country": "France",
        "name": "Simba",
        "type": "Cat",
      },
    ],
    "groupIndex": 0,
    "groupSummaryMark": Object {},
    "key": Array [
      Array [
        "France",
        "Cat",
      ],
      "--: + summary--\\\\",
    ],
  },
]
`;

exports[`GroupUtils convertToFlat simple 1`] = `
Array [
  Object {
    "groupMark": Object {},
    "key": Array [
      "France",
    ],
    "value": "France",
  },
  Object {
    "country": "France",
    "name": "Simba",
    "type": "Cat",
  },
]
`;

exports[`GroupUtils getGroupedStructure basic 1`] = `
Map {
  "Czech Republic" => Map {
    "Cat" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Kas",
        "type": "Cat",
      },
      Object {
        "country": "Czech Republic",
        "name": "Hash",
        "type": "Cat",
      },
    ],
    "Dog" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Beethoven",
        "type": "Dog",
      },
    ],
  },
  "Montenegro" => Map {
    "Dog" => Array [
      Object {
        "country": "Montenegro",
        "name": "Rex",
        "type": "Dog",
      },
    ],
  },
  "France" => Map {
    "Cat" => Array [
      Object {
        "country": "France",
        "name": "Simba",
        "type": "Cat",
      },
    ],
  },
}
`;

exports[`GroupUtils getGroupedStructure expanded couple (skip Czech Republic) 1`] = `
Map {
  "Czech Republic" => Array [],
  "Montenegro" => Map {
    "Dog" => Array [],
  },
  "France" => Array [],
}
`;

exports[`GroupUtils getGroupedStructure expanded couple 1`] = `
Map {
  "Czech Republic" => Map {
    "Cat" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Kas",
        "type": "Cat",
      },
      Object {
        "country": "Czech Republic",
        "name": "Hash",
        "type": "Cat",
      },
    ],
    "Dog" => Array [],
  },
  "Montenegro" => Map {
    "Dog" => Array [],
  },
  "France" => Array [],
}
`;

exports[`GroupUtils getGroupedStructure expanded root 1`] = `
Map {
  "Czech Republic" => Map {
    "Cat" => Array [],
    "Dog" => Array [],
  },
  "Montenegro" => Array [],
  "France" => Array [],
}
`;

exports[`GroupUtils getGroupedStructure expanded second 1`] = `
Map {
  "Czech Republic" => Map {
    "Cat" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Kas",
        "type": "Cat",
      },
      Object {
        "country": "Czech Republic",
        "name": "Hash",
        "type": "Cat",
      },
    ],
    "Dog" => Array [],
  },
  "Montenegro" => Array [],
  "France" => Array [],
}
`;

exports[`GroupUtils getGroupedStructure returns summary 1`] = `
Map {
  "Czech Republic" => Map {
    "Cat" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Kas",
        "type": "Cat",
      },
      Object {
        "country": "Czech Republic",
        "name": "Hash",
        "type": "Cat",
      },
      Object {
        "groupData": Array [
          Object {
            "country": "Czech Republic",
            "name": "Kas",
            "type": "Cat",
          },
          Object {
            "country": "Czech Republic",
            "name": "Hash",
            "type": "Cat",
          },
        ],
        "groupIndex": 1,
        "groupSummaryMark": Object {},
        "key": "[[\\"Czech Republic\\",\\"Cat\\"],\\"--:+summary--\\"]",
      },
    ],
    "Dog" => Array [
      Object {
        "country": "Czech Republic",
        "name": "Beethoven",
        "type": "Dog",
      },
      Object {
        "groupData": Array [
          Object {
            "country": "Czech Republic",
            "name": "Beethoven",
            "type": "Dog",
          },
        ],
        "groupIndex": 1,
        "groupSummaryMark": Object {},
        "key": "[[\\"Czech Republic\\",\\"Dog\\"],\\"--:+summary--\\"]",
      },
    ],
    Object {} => Object {
      "groupData": Array [
        Object {
          "country": "Czech Republic",
          "name": "Kas",
          "type": "Cat",
        },
        Object {
          "country": "Czech Republic",
          "name": "Beethoven",
          "type": "Dog",
        },
        Object {
          "country": "Czech Republic",
          "name": "Hash",
          "type": "Cat",
        },
      ],
      "groupIndex": 0,
      "groupSummaryMark": Object {},
      "key": "[[\\"Czech Republic\\"],\\"--:+summary--\\"]",
    },
  },
  "Montenegro" => Map {
    "Dog" => Array [
      Object {
        "country": "Montenegro",
        "name": "Rex",
        "type": "Dog",
      },
      Object {
        "groupData": Array [
          Object {
            "country": "Montenegro",
            "name": "Rex",
            "type": "Dog",
          },
        ],
        "groupIndex": 1,
        "groupSummaryMark": Object {},
        "key": "[[\\"Montenegro\\",\\"Dog\\"],\\"--:+summary--\\"]",
      },
    ],
    Object {} => Object {
      "groupData": Array [
        Object {
          "country": "Montenegro",
          "name": "Rex",
          "type": "Dog",
        },
      ],
      "groupIndex": 0,
      "groupSummaryMark": Object {},
      "key": "[[\\"Montenegro\\"],\\"--:+summary--\\"]",
    },
  },
  "France" => Map {
    "Cat" => Array [
      Object {
        "country": "France",
        "name": "Simba",
        "type": "Cat",
      },
      Object {
        "groupData": Array [
          Object {
            "country": "France",
            "name": "Simba",
            "type": "Cat",
          },
        ],
        "groupIndex": 1,
        "groupSummaryMark": Object {},
        "key": "[[\\"France\\",\\"Cat\\"],\\"--:+summary--\\"]",
      },
    ],
    Object {} => Object {
      "groupData": Array [
        Object {
          "country": "France",
          "name": "Simba",
          "type": "Cat",
        },
      ],
      "groupIndex": 0,
      "groupSummaryMark": Object {},
      "key": "[[\\"France\\"],\\"--:+summary--\\"]",
    },
  },
}
`;

exports[`GroupUtils getGroupedStructure should not expand second 1`] = `
Map {
  "Czech Republic" => Array [],
  "Montenegro" => Array [],
  "France" => Array [],
}
`;

exports[`GroupUtils groupBy 1`] = `
Map {
  "Cat" => Array [
    Object {
      "country": "Czech Republic",
      "name": "Kas",
      "type": "Cat",
    },
    Object {
      "country": "France",
      "name": "Simba",
      "type": "Cat",
    },
    Object {
      "country": "Czech Republic",
      "name": "Hash",
      "type": "Cat",
    },
  ],
  "Dog" => Array [
    Object {
      "country": "Montenegro",
      "name": "Rex",
      "type": "Dog",
    },
    Object {
      "country": "Czech Republic",
      "name": "Beethoven",
      "type": "Dog",
    },
  ],
}
`;

exports[`GroupUtils groupBy empty 1`] = `
Map {
  "Cat" => Array [],
  "Dog" => Array [],
}
`;
